refact view render

--- a/src/DemoOrchardWeb/Views/Shared/_Layout.cshtml
+++ b/src/DemoOrchardWeb/Views/Shared/_Layout.cshtml
@@ -7,21 +7,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
+    <link href="~/app/libs/bootstrap3/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-<div>
+<div class="container">
     <ul>
         <li>
             <a href="~/">~/</a>
         </li>
         <li>
-            <a href="~/Root/Home/Append">~/Razor/Home/Append</a>
+            <a href="~/Views/Demo.Index">~/Views/Demo.Index</a>
         </li>
         <li>
-            <a href="~/Razor/Home.Index">~/Razor/Home.Index</a>
+            <a href="~/Views/Demo.Index2">~/Views/Demo.Index2</a>
         </li>
         <li>
-            <a href="~/Razor/Home.Index2">~/Razor/Home.Index2</a>
+            <a href="~/Views/Demo/Append">~/Views/Demo/Append</a>
         </li>
     </ul>
     <hr/>
